2002-03-28  Terry Biggs <tbiggs@users.sourceforge.net>

	* reworked some of the save and load bookmarks code
	  to work with Victor's changes	
	
2002-03-28  Victor Porton  <porton@localhost>

	* rewritten some of bookmarks code

2002-03-26 Terry Biggs <tbiggs@users.sourceforge.net>

	* removed sw_utility.* it was no longer used
	* reworked saveshortcutbarSW() in sw_shortcutbar.cpp to remove
	  annoying unbalanced bracket warning during make

2002-03-26 Victor Porton <porton@narod.ru>

	* fixed crash if an interlinear module is NULL

2002-03-21 Terry Biggs <tbiggs@users.sourceforge.net>

	* a single click with left button will lookup word under
	  cursor in current Dict/Lex module and display it in
	  shortcut bar viewer. Works in gbs, texts, and comm windows.


2002-03-14 Terry Biggs <tbiggs@users.sourceforge.net>

	* adding a new bookmark group now adds a menu item to
	  the add bookmark menus.
	* fixed the detached interlinear not changing modules bug
	* setup druid now shows correct gnomesword version number
	* notebook tab menus now display last item correctly.
	* added find dialog that can be used outside of html editor
	* added files gs_find_dlg.c and gs_find_dlg.h


2002-03-11 Jan Paul Schmidt <japas.@users.sourceforge.net>

	* added German translation

2002-03-06 Terry Biggs <tbiggs@users.sourceforge.net>

	* added notebook to lower pane area (lex/dict).
	* added Dict/Lex, GBS and Interlinear page to notebook
	* removed gs_gbs.* - all gbs code is in sw_gbs.*
	* removed editor functions from gbs - will add back later.


2002-03-01 Terry Biggs <tbiggs@users.sourceforge.net>

	* added gs_editor_search.* (from GtkHTML editor)
	

2002-02-23 Terry Biggs <tbiggs@users.sourceforge.net>

	* changed sw_gnomesword.* to sw_sword.*
	* changed gs_information_sw.* sw_information_dlg.*
	* changed gs_html_editor.* to gs_editor.*
	* added gs_gbs.* and sw_gbs.*
	* added gs_getinfo_dlg.*


2002-02-19 Terry Biggs <tbiggs@users.sourceforge.net>
