@@ -993,12 +993,6 @@ static void on_tbtnSBViewMain_toggled(GtkToggleButton * togglebutton,
 }
 
 
-static void on_btnSBShowCV_clicked(GtkButton * button, gpointer user_data)
-{
-
-}
-
-
 static void on_btnViewVL_clicked(GtkButton * button, gpointer user_data)
 {
 	gtk_notebook_set_page(GTK_NOTEBOOK(GTK_WIDGET(user_data)), 0);
@@ -1122,7 +1116,7 @@ static GtkWidget *setupVerseListBar(GtkWidget * vboxVL, SETTINGS * s)
 	GtkWidget *tmp_toolbar_icon;
 	GtkWidget *btnSBSaveVL;
 	GtkWidget *tbtnSBViewMain;
-	GtkWidget *btnSBShowCV;
+	//GtkWidget *btnSBShowCV;
 	GtkWidget *vseparator1;
 	GtkWidget *btnViewVL;
 	GtkWidget *btnViewSR;
@@ -1196,7 +1190,7 @@ static GtkWidget *setupVerseListBar(GtkWidget * vboxVL, SETTINGS * s)
 				 tbtnSBViewMain,
 				 (GtkDestroyNotify) gtk_widget_unref);
 	gtk_widget_show(tbtnSBViewMain);
-
+/*
 	tmp_toolbar_icon =
 	    gnome_stock_pixmap_widget(s->app, GNOME_STOCK_PIXMAP_REFRESH);
 	btnSBShowCV =
@@ -1211,7 +1205,7 @@ static GtkWidget *setupVerseListBar(GtkWidget * vboxVL, SETTINGS * s)
 				 (GtkDestroyNotify) gtk_widget_unref);
 	gtk_widget_show(btnSBShowCV);
 	gtk_widget_set_sensitive(btnSBShowCV, FALSE);
-	
+*/	
 	vseparator1 = gtk_vseparator_new();
 	gtk_widget_ref(vseparator1);
 	gtk_object_set_data_full(GTK_OBJECT(s->app), "vseparator1",
@@ -1496,7 +1490,6 @@ static GtkWidget *setupVerseListBar(GtkWidget * vboxVL, SETTINGS * s)
 				   gtk_notebook_get_nth_page(GTK_NOTEBOOK
 							     (nbVL), 2),
 				   label3);
-
 	
 	gtk_signal_connect(GTK_OBJECT(s->vlsbhtml), "link_clicked",
 			   GTK_SIGNAL_FUNC(on_vllink_clicked), s);
@@ -1504,8 +1497,6 @@ static GtkWidget *setupVerseListBar(GtkWidget * vboxVL, SETTINGS * s)
 			   GTK_SIGNAL_FUNC(on_btnSBSaveVL_clicked), s);
 	gtk_signal_connect(GTK_OBJECT(tbtnSBViewMain), "toggled",
 			   GTK_SIGNAL_FUNC(on_tbtnSBViewMain_toggled), s);
-	gtk_signal_connect(GTK_OBJECT(btnSBShowCV), "clicked",
-			   GTK_SIGNAL_FUNC(on_btnSBShowCV_clicked), s);
 	gtk_signal_connect(GTK_OBJECT(btnViewVL), "clicked",
 			   GTK_SIGNAL_FUNC(on_btnViewVL_clicked),
 			   GTK_WIDGET(nbVL));
